Start adding classes

--- a/src/FluiTec.AppFx.Identity/FluiTec.AppFx.Identity.csproj
+++ b/src/FluiTec.AppFx.Identity/FluiTec.AppFx.Identity.csproj
@@ -23,4 +23,13 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Repositories\" />
+    <Folder Include="Data\Schema\Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\fluitec.appfx.data\src\FluiTec.AppFx.Data\FluiTec.AppFx.Data.csproj" />
+  </ItemGroup>
+
 </Project>
