--- a/src/FluiTec.AppFx.Identity.Dapper/FluiTec.AppFx.Identity.Dapper.csproj
+++ b/src/FluiTec.AppFx.Identity.Dapper/FluiTec.AppFx.Identity.Dapper.csproj
@@ -23,4 +23,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\fluitec.appfx.data\src\FluiTec.AppFx.Data.Dapper\FluiTec.AppFx.Data.Dapper.csproj" />
+    <ProjectReference Include="..\FluiTec.AppFx.Identity\FluiTec.AppFx.Identity.csproj" />
+  </ItemGroup>
+
 </Project>
