--- a/src/FluiTec.AppFx.Identity.Dapper/FluiTec.AppFx.Identity.Dapper.csproj
+++ b/src/FluiTec.AppFx.Identity.Dapper/FluiTec.AppFx.Identity.Dapper.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\FluiTec.AppFx.Identity\FluiTec.AppFx.Identity.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Schema\Migration\Versions\" />
+  </ItemGroup>
+
 </Project>
