--- a/src/FluiTec.AppFx.Identity.Dapper.Pgsql/FluiTec.AppFx.Identity.Dapper.Pgsql.csproj
+++ b/src/FluiTec.AppFx.Identity.Dapper.Pgsql/FluiTec.AppFx.Identity.Dapper.Pgsql.csproj
@@ -10,6 +10,7 @@
     <PreBuildEvent></PreBuildEvent>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +22,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FluiTec.AppFx.Identity.Dapper\FluiTec.AppFx.Identity.Dapper.csproj" />
   </ItemGroup>
 
 </Project>
