--- a/src/FluiTec.AppFx.Identity.Dapper/FluiTec.AppFx.Identity.Dapper.csproj
+++ b/src/FluiTec.AppFx.Identity.Dapper/FluiTec.AppFx.Identity.Dapper.csproj
@@ -10,6 +10,7 @@
     <PreBuildEvent></PreBuildEvent>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
