move and rename sample

--- a/src/samples/FluiTec.AppFx.Identity.Samples.DbSetup/FluiTec.AppFx.Identity.Samples.DbSetup.csproj
+++ b/src/samples/FluiTec.AppFx.Identity.Samples.DbSetup/FluiTec.AppFx.Identity.Samples.DbSetup.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\fluitec.appfx.options\src\FluiTec.AppFx.Options\FluiTec.AppFx.Options.csproj" />
-    <ProjectReference Include="..\FluiTec.AppFx.Identity.Dynamic\FluiTec.AppFx.Identity.Dynamic.csproj" />
+    <ProjectReference Include="..\..\..\fluitec.appfx.options\src\FluiTec.AppFx.Options\FluiTec.AppFx.Options.csproj" />
+    <ProjectReference Include="..\..\FluiTec.AppFx.Identity.Dynamic\FluiTec.AppFx.Identity.Dynamic.csproj" />
   </ItemGroup>
 
 </Project>
