--- a/src/samples/FluiTec.AppFx.Identity.Samples.DbSetup/FluiTec.AppFx.Identity.Samples.DbSetup.csproj
+++ b/src/samples/FluiTec.AppFx.Identity.Samples.DbSetup/FluiTec.AppFx.Identity.Samples.DbSetup.csproj
@@ -17,4 +17,6 @@
     <ProjectReference Include="..\..\FluiTec.AppFx.Identity.Dynamic\FluiTec.AppFx.Identity.Dynamic.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
