--- a/src/tests/FluiTec.AppFx.Identity.TestLibrary/FluiTec.AppFx.Identity.TestLibrary.csproj
+++ b/src/tests/FluiTec.AppFx.Identity.TestLibrary/FluiTec.AppFx.Identity.TestLibrary.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\..\FluiTec.AppFx.Identity.Dynamic\FluiTec.AppFx.Identity.Dynamic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+  </ItemGroup>
+
 </Project>
