--- a/src/FluiTec.AppFx.Identity/FluiTec.AppFx.Identity.csproj
+++ b/src/FluiTec.AppFx.Identity/FluiTec.AppFx.Identity.csproj
@@ -33,6 +33,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\fluitec.appfx.data\src\FluiTec.AppFx.Data.Sql\FluiTec.AppFx.Data.Sql.csproj" />
 		<ProjectReference Include="..\..\fluitec.appfx.options\src\FluiTec.AppFx.Options\FluiTec.AppFx.Options.csproj" />
 	</ItemGroup>
 
@@ -42,8 +43,8 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='Release'">
-		<PackageReference Include="FluiTec.AppFx.Data" Version="1.1.2"></PackageReference>
-		<PackageReference Include="FluiTec.AppFx.Data.Migration" Version="1.1.2"></PackageReference>
+		<PackageReference Include="FluiTec.AppFx.Data" Version="1.1.5"></PackageReference>
+		<PackageReference Include="FluiTec.AppFx.Data.Migration" Version="1.1.5"></PackageReference>
 	</ItemGroup>
 
 </Project>
