--- a/src/tests/UnitTests/FluiTec.AppFx.Identity.Tests/FluiTec.AppFx.Identity.Tests.csproj
+++ b/src/tests/UnitTests/FluiTec.AppFx.Identity.Tests/FluiTec.AppFx.Identity.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -17,7 +17,6 @@
 
   <ItemGroup>
     <Folder Include="Data\Entities\" />
-    <Folder Include="IdentityStores\" />
   </ItemGroup>
 
   <ItemGroup>
